--- a/src/index.scss
+++ b/src/index.scss
@@ -6,9 +6,18 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+
+  .homeOuterContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+    .homeInnerContainer{
+        display: flex;
+        flex-direction: row;
+    }
   }
+  
   
