Welcome component with static data

--- a/src/styleConstants.scss
+++ b/src/styleConstants.scss
@@ -15,8 +15,8 @@
     --color-brand: #246BFD;
     --color-text-darker: #273240;
     --color-tab: #5D5D9C;
-    --dark-grey: #BDBDBD;
-    --grey: #D5D5E1;
-    --light-grey: #F3F3F8;
+    --color-dark-grey: #BDBDBD;
+    --color-grey: #D5D5E1;
+    --color-light-grey: #F3F3F8;
     
   }
