--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,7 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+    font-family: "Poppins", "IBM Plex Mono";
+    ;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: var(--color-light-grey);
@@ -18,10 +17,18 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0px 15px;
+
     
     .homeInnerContainer{
         display: flex;
         flex-direction: row;
+        height: 75%;
+    }
+
+    .homeInnerMobileContainer{
+        display: flex;
+        flex-direction: column;
         height: 75%;
     }
   }
