--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,8 @@ body {
     flex-direction: column;
     justify-content: center;
     margin: 0px 15px;
+    min-width: 65%;
+
 
     
     .homeInnerContainer{
